tests/03-too_many_args.stderr
error: unexpected token: expected a `{integer}` type
 --> tests/03-too_many_args:3:13
  |
3 | #[bitflag(u8, something_else)]
  |             ^
